--- a/SendMailOauth2/ConsoleApp2/packages.config
+++ b/SendMailOauth2/ConsoleApp2/packages.config
@@ -2,8 +2,13 @@
 <packages>
   <package id="MailKit" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Identity.Client" version="4.49.1" targetFramework="net452" />
-  <package id="Microsoft.IdentityModel.Abstractions" version="6.22.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.25.1" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.25.1" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.25.1" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.25.1" targetFramework="net452" />
   <package id="MimeKit" version="3.1.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net452" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net452" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.25.1" targetFramework="net452" />
 </packages>
