--- a/SendMailOauth2/SendMailOauth2/SendMailOauth2.csproj
+++ b/SendMailOauth2/SendMailOauth2/SendMailOauth2.csproj
@@ -71,8 +71,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configs\TokenOAuth2.cs" />
     <Compile Include="Configs\EmailConfig.cs" />
-    <Compile Include="Configs\OAuth2Config.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +81,7 @@
     </Compile>
     <Compile Include="LogWriter.cs" />
     <Compile Include="Models\Email.cs" />
+    <Compile Include="Models\GetAccessTokenResponse.cs" />
     <Compile Include="Models\Token.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -97,6 +98,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="LocalStorage\LocalStorage.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="OAuth2Config.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -108,12 +112,13 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Content Include="StaticConfig\EmailConfig__.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="StaticConfig\EmailConfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="StaticConfig\EmailConfig_.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
