--- a/SendMailOauth2/SendMailOauth2/packages.config
+++ b/SendMailOauth2/SendMailOauth2/packages.config
@@ -2,9 +2,15 @@
 <packages>
   <package id="MailKit" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.Identity.Client" version="4.49.1" targetFramework="net452" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.25.3" targetFramework="net452" />
   <package id="Microsoft.IdentityModel.Abstractions" version="6.22.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.3.0" targetFramework="net452" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.1" targetFramework="net452" />
+  <package id="Microsoft.NETCore.Targets" version="1.1.3" targetFramework="net452" />
   <package id="MimeKit" version="3.1.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net452" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net452" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net452" />
+  <package id="System.Private.Uri" version="4.3.2" targetFramework="net452" />
 </packages>
